Filter POI by coordinate and radius
